<resources>
    <string name="app_name">UWatch</string>

    <!--Spinner-->
    <string-array name="sorting_options_array">
        <item>Most Popular</item>
        <item>Top Rated</item>
        <item>Favorites</item>
    </string-array>

    <string name="spinner_title">Sorting</string>

    <!--Internet Dialog-->
    <string name="connection_dialog_title">WARNING</string>
    <string name="connection_dialog_message">No Internet connection available. Please reconnect and try again.</string>
    <string name="ok">OK</string>

    <!--No Favorites dialog-->
    <string name="favorites_dialog_title">No Favorite Movies Selected</string>
    <string name="favorites_dialog_message">You can select as many as you like : )</string>

    <!--No Reviews dialog-->
    <string name="no_reviews_dialog_title">WARNING</string>
    <string name="no_reviews_dialog_message">No Reviews available : (</string>

    <!--Details activity-->
    <string name="vote_average">Rating</string>
    <string name="release_date">Released</string>
    <string name="poster_description">Movie poster</string>
    <string name="plot">Plot</string>
    <string name="cast">Cast</string>
    <string name="trailers">Trailers</string>
    <string name="reviews">Reviews</string>
    <string name="read_reviews">Read Reviews</string>

    <!--Backdrop image size-->
    <string name="backdrop_size">w300</string>

    <!--Poster image size-->
    <string name="poster_size">w185</string>

    <!--Descriptions for accessibility-->
    <string name="star_logo_description">Star logo</string>
    <string name="clock_logo_description">Clock logo</string>
    <string name="language_logo_description">Language logo</string>
    <string name="calendar_logo_description">Calendar logo</string>
    <string name="backdrop_description">Movie Backdrop</string>
    <string name="is_for_adults_description">Is for adults</string>
    <string name="heart_description">heart logo</string>

    <!--Placeholder strings-->
    <string name="movie_title_placeholder">Titanic</string>
    <string name="movie_rating_placeholder">8.6</string>
    <string name="movie_runtime_placeholder">120 min</string>
    <string name="movie_language_placeholder">en</string>
    <string name="movie_release_placeholder">en</string>
    <string name="movie_plot_placeholder">Sed ut perspiciatis unde omnis iste natus error sit voluptatem accusantium doloremque laudantium, totam rem aperiam, eaque ipsa quae ab illo inventore veritatis et quasi architecto beatae vitae dicta sunt explicabo. Nemo enim ipsam voluptatem quia voluptas sit aspernatur aut odit aut fugit, sed quia consequuntur magni dolores eos qui ratione voluptatem sequi nesciunt. Neque porro quisquam est, qui dolorem ipsum quia dolor sit amet, consectetur, adipisci velit</string>
    <string name="movie_cast_placeholder">Leonardo DiCaprio\nKate Winslet</string>

</resources>
