<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:orientation="vertical"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="@dimen/mainPosterLayoutWidth"
    android:layout_height="wrap_content"
    android:layout_gravity="center"
    android:layout_margin="4dp"
    android:background="@color/items_background"
    android:gravity="center"
    android:padding="4dp">

    <!--IMAGE VIEW TO BE ADDED BY ADAPTER-->

    <RelativeLayout
        android:orientation="vertical"
        android:layout_width="match_parent"
        android:layout_height="wrap_content">

        <TextView
            android:id="@+id/movie_item_title"
            style="@style/mainGridPosterText"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_alignParentTop="true"
            android:textColor="@android:color/white"
            tools:text="@string/movie_title_placeholder" />

        <!--Start and rating-->
        <LinearLayout
            android:id="@+id/movie_item_rating_star_layout"
            android:layout_width="wrap_content"
            android:layout_height="25dp"
            android:layout_alignParentLeft="true"
            android:layout_alignParentStart="true"
            android:layout_below="@id/movie_item_title"
            android:layout_gravity="center"
            android:layout_marginTop="5dp"
            android:gravity="center">

            <!--Star-->

            <ImageView
                android:id="@+id/movie_item_star"
                style="@style/mainGridPosterLogos"
                android:layout_width="20dp"
                android:layout_height="20dp"
                android:src="@drawable/star"
                android:contentDescription="@string/star_logo_description"/>

            <TextView
                android:id="@+id/movie_item_rating"
                style="@style/mainGridPosterRatingText"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:textColor="@android:color/white"
                android:layout_margin="2dp"
                tools:text="@string/movie_rating_placeholder" />

        </LinearLayout>

        <!--Adults?-->
        <ImageView
            android:id="@+id/movie_item_adults"
            style="@style/mainGridPosterForAdults"
            android:layout_width="25dp"
            android:layout_height="25dp"
            android:layout_below="@id/movie_item_title"
            android:layout_gravity="end"
            android:layout_marginLeft="10dp"
            android:layout_marginStart="10dp"
            android:layout_marginTop="5dp"
            android:layout_toRightOf="@id/movie_item_rating_star_layout"
            android:layout_toEndOf="@id/movie_item_rating_star_layout"
            tools:src="@drawable/for_children"
            android:contentDescription="@string/is_for_adults_description"/>

        <!--Favorite?-->
        <ImageView
            android:id="@+id/movie_item_favorite"
            style="@style/mainGridPosterHeart"
            android:layout_width="25dp"
            android:layout_height="25dp"
            android:layout_alignParentEnd="true"
            android:layout_alignParentRight="true"
            android:layout_below="@id/movie_item_title"
            tools:src="@drawable/heart_not_pressed"
            android:contentDescription="@string/heart_description"/>

    </RelativeLayout>


</LinearLayout>