<?xml version="1.0" encoding="utf-8"?>
<android.support.design.widget.CoordinatorLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <android.support.design.widget.AppBarLayout
        android:layout_width="match_parent"
        android:layout_height="90dp"
        android:background="@color/colorPrimary"
        android:fitsSystemWindows="true"
        android:padding="0dp"
        android:theme="@style/AppTheme.AppBarOverlay">

        <android.support.design.widget.CollapsingToolbarLayout
            android:id="@+id/collap_toolbar"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:theme="@style/AppTheme.AppBarOverlay"
            app:collapsedTitleTextAppearance="@style/TextAppearance.CollapsedTitle"
            app:expandedTitleGravity="center"
            app:expandedTitleTextAppearance="@style/TextAppearance.ExpandedTitle"
            app:layout_scrollFlags="scroll|exitUntilCollapsed">

            <android.support.v7.widget.Toolbar
                android:id="@+id/toolbar"
                android:layout_width="match_parent"
                android:layout_height="?attr/actionBarSize"
                app:layout_collapseMode="pin"
                app:popupTheme="@style/AppTheme.PopupOverlay">

            </android.support.v7.widget.Toolbar>

        </android.support.design.widget.CollapsingToolbarLayout>

    </android.support.design.widget.AppBarLayout>

    <!-- Scrollable view here -->
    <android.support.v4.widget.NestedScrollView
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        app:layout_behavior="@string/appbar_scrolling_view_behavior">

        <!--Main Layout -->

        <FrameLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content">

            <ProgressBar
                xmlns:android="http://schemas.android.com/apk/res/android"
                android:id="@+id/progress_bar_details"
                android:layout_width="42dp"
                android:layout_height="match_parent"
                android:layout_gravity="center"
                android:visibility="gone"/>

            <LinearLayout
                android:id="@+id/main_linear_layout"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="vertical"
                tools:context="com.example.android.favoritemoviesapp.DetailsActivity">


                <!--Movie poster-->

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:background="@android:color/black"
                    android:orientation="horizontal">

                    <ImageView
                        android:id="@+id/movie_details_poster_view"
                        android:layout_width="match_parent"
                        android:layout_height="250dp"
                        android:contentDescription="@string/poster_description"
                        tools:src="@drawable/placeholder" />

                </LinearLayout>

                <!--Movie title-->

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:background="@color/colorPrimaryDark"
                    android:orientation="horizontal">

                    <TextView
                        android:id="@+id/movie_title_view"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:padding="5dp"
                        android:paddingLeft="10dp"
                        android:paddingRight="10dp"
                        android:textAlignment="center"
                        android:textColor="@android:color/white"
                        android:textSize="16sp"
                        android:textStyle="bold"
                        tools:text="Pirates of the carribean " />

                </LinearLayout>

                <!--Movie Data-->

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:background="@color/colorPrimary"
                    android:gravity="center"
                    android:orientation="horizontal"
                    android:padding="6dp">

                    <!--Rating-->

                    <LinearLayout
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_marginEnd="15dp"
                        android:layout_marginRight="15dp">

                        <TextView
                            android:layout_width="wrap_content"
                            android:layout_height="match_parent"
                            android:layout_marginEnd="5dp"
                            android:layout_marginRight="5dp"
                            android:gravity="center"
                            android:text="@string/vote_average"
                            android:textColor="@android:color/white"
                            android:textStyle="bold" />

                        <FrameLayout
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:background="@color/colorSecondary">

                            <TextView
                                android:id="@+id/movie_details_vote_view"
                                android:layout_width="wrap_content"
                                android:layout_height="wrap_content"
                                android:padding="10dp"
                                android:textColor="@color/colorPrimaryDark"
                                android:textStyle="bold"
                                tools:text="8.6 / 10" />

                        </FrameLayout>

                    </LinearLayout>

                    <!--Released-->

                    <LinearLayout
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_marginLeft="10dp"
                        android:layout_marginStart="10dp">

                        <TextView
                            android:layout_width="wrap_content"
                            android:layout_height="match_parent"
                            android:layout_marginEnd="5dp"
                            android:layout_marginRight="5dp"
                            android:gravity="center"
                            android:text="@string/release_date"
                            android:textColor="@android:color/white"
                            android:textStyle="bold" />

                        <FrameLayout
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:background="@color/colorSecondary">

                            <TextView
                                android:id="@+id/movie_details_release_view"
                                android:layout_width="wrap_content"
                                android:layout_height="wrap_content"
                                android:padding="10dp"
                                android:textColor="@color/colorPrimaryDark"
                                android:textStyle="bold"
                                tools:text="1996" />

                        </FrameLayout>

                    </LinearLayout>

                </LinearLayout>

                <!--Plot section-->

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:orientation="vertical">

                    <!--Title-->

                    <TextView
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:layout_margin="5dp"
                        android:padding="5dp"
                        android:text="@string/plot"
                        android:textAlignment="center"
                        android:textSize="16sp" />

                    <!--Horizontal rule-->

                    <View
                        android:layout_width="match_parent"
                        android:layout_height="0.5dp"
                        android:layout_marginEnd="20dp"
                        android:layout_marginLeft="18dp"
                        android:layout_marginRight="20dp"
                        android:layout_marginStart="18dp"
                        android:background="@android:color/black" />

                    <!--Plot text-->

                    <TextView
                        android:id="@+id/movie_details_plot_view"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:maxLines="14"
                        android:padding="18dp"
                        android:scrollbars="vertical"
                        android:textColor="@android:color/black"
                        android:textSize="16sp"
                        tools:text="At vero eos et accusamus et iusto odio dignissimos ducimus qui blanditiis praesentium voluptatum deleniti atque corrupti quos dolores et quas molestias excepturi sint occaecati cupiditate non provident, similique sunt in culpa qui officia deserunt mollitia animi, id est laborum et dolorum fuga. Et harum quidem rerum facilis est et expedita distinctio. Nam libero tempore, cum soluta nobis est eligendi optio cumque nihil impedit quo minus id quod maxime placeat facere possimus, omnis voluptas assumenda est, omnis dolor repellendus. Temporibus autem quibusdam et aut officiis debitis aut rerum necessitatibus saepe eveniet ut et voluptates repudiandae sint et molestiae non recusandae. Itaque earum rerum hic tenetur a sapiente delectus, ut aut reiciendis voluptatibus maiores alias consequatur aut perferendis doloribus asperiores repellat." />

                    <!--// TESTING -->
                    <TextView
                        android:id="@+id/language"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content" />

                    <TextView
                        android:id="@+id/runtime"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content" />

                    <TextView
                        android:id="@+id/forAdults"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content" />

                    <TextView
                        android:id="@+id/backdrop"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content" />


                </LinearLayout>

            </LinearLayout>

        </FrameLayout>

    </android.support.v4.widget.NestedScrollView>

</android.support.design.widget.CoordinatorLayout>
